@@ -45,8 +45,6 @@ import android.widget.Toast;
 import com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView;
 import com.github.ksoichiro.android.observablescrollview.ObservableScrollViewCallbacks;
 import com.github.ksoichiro.android.observablescrollview.ScrollState;
-import com.google.android.gms.common.api.GoogleApiClient;
-import com.google.android.gms.location.LocationRequest;
 import com.truman.showtime.showtime.R;
 import com.truman.showtime.showtime.models.Theater;
 import com.truman.showtime.showtime.service.ShowtimeService;
@@ -73,10 +71,8 @@ public class TheaterListFragment extends android.support.v4.app.Fragment impleme
     private SwipeRefreshLayout mRefreshLayout;
     private ObservableRecyclerView mRecyclerView;
     private LinearLayoutManager mLayoutManager;
-    private GoogleApiClient mGoogleApiClient;
     private Showtimes mShowtimeService;
     private Location mLastLocation;
-    private LocationRequest mLocationRequest;
     private String mCity;
     private Theater mSelectedTheater;
     private Context mApplicationContext;
@@ -306,7 +302,7 @@ public class TheaterListFragment extends android.support.v4.app.Fragment impleme
             Geocoder geocoder = new Geocoder(mApplicationContext);
             List<Address> addresses = null;
             try {
-                addresses = geocoder.getFromLocation(new Double(lat), new Double(lon), 1);
+                addresses = geocoder.getFromLocation(Double.valueOf(lat), Double.valueOf(lon), 1);
                 if (addresses.size() > 0) {
                     String address = addresses.get(0).getLocality();
                     if (addresses.get(0).getAdminArea() != null){
@@ -406,7 +402,9 @@ public class TheaterListFragment extends android.support.v4.app.Fragment impleme
                 mRefreshLayout.setRefreshing(false);
             } else {
                 mRefreshLayout.setRefreshing(false);
-                Toast.makeText(mApplicationContext, getString(R.string.theaters_not_found), Toast.LENGTH_LONG).show();
+                if (isAdded()) {
+                    Toast.makeText(mApplicationContext, getString(R.string.theaters_not_found), Toast.LENGTH_LONG).show();
+                }
             }
         }
     }
